Memory leak in WB_IsMethodCompatible

XMLWordPrintable

    • b16

        Direct leak of 5376 byte(s) in 24 object(s) allocated from:
            #0 0x7fba86ab89cf in __interceptor_malloc ../../../../src/libsanitizer/asan/asan_malloc_linux.cpp:69
            #1 0x7fba830b4a6f in os::malloc(unsigned long, MEMFLAGS, NativeCallStack const&) src/hotspot/share/runtime/os.cpp:654
            #2 0x7fba80c1ce77 in AllocateHeap(unsigned long, MEMFLAGS, NativeCallStack const&, AllocFailStrategy::AllocFailEnum) src/hotspot/share/memory/allocation.cpp:42
            #3 0x7fba80c1ce77 in AllocateHeap(unsigned long, MEMFLAGS, AllocFailStrategy::AllocFailEnum) src/hotspot/share/memory/allocation.cpp:52
            #4 0x7fba81653e1e in CHeapObjBase::operator new(unsigned long, MEMFLAGS) src/hotspot/share/memory/allocation.hpp:183
            #5 0x7fba81653e1e in CHeapObj<(MEMFLAGS)7>::operator new(unsigned long) src/hotspot/share/memory/allocation.hpp:237
            #6 0x7fba81653e1e in DirectiveSet::clone(DirectiveSet const*) src/hotspot/share/compiler/compilerDirectives.cpp:564
            #7 0x7fba81658891 in DirectiveSetPtr::cloned() src/hotspot/share/compiler/compilerDirectives.cpp:327
            #8 0x7fba81658891 in DirectiveSet::compilecommand_compatibility_init(methodHandle const&) src/hotspot/share/compiler/compilerDirectives.cpp:381
            #9 0x7fba8165a103 in DirectiveSet::compilecommand_compatibility_init(methodHandle const&) src/hotspot/share/compiler/compilerDirectives.cpp:353
            #10 0x7fba8165a103 in DirectivesStack::getMatchingDirective(methodHandle const&, AbstractCompiler*) src/hotspot/share/compiler/compilerDirectives.cpp:723
            #11 0x7fba83d0fe4f in is_excluded_for_compiler src/hotspot/share/prims/whitebox.cpp:826
            #12 0x7fba83d0fe4f in WB_IsMethodCompilable src/hotspot/share/prims/whitebox.cpp:869
            #13 0x7fba6ff58ddf (<unknown module>)
            #14 0x7fba6ff5470d (<unknown module>)
            #15 0x7fba6ff5470d (<unknown module>)
            #16 0x7fba6ff5470d (<unknown module>)
            #17 0x7fba6ff545e5 (<unknown module>)
            #18 0x7fba6ff545e5 (<unknown module>)
            #19 0x7fba6ff545e5 (<unknown module>)
            #20 0x7fba6ff54a71 (<unknown module>)
            #21 0x7fba6ff54a71 (<unknown module>)
            #22 0x7fba6ff545e5 (<unknown module>)
            #23 0x7fba6ff545e5 (<unknown module>)
            #24 0x7fba6ff37cc5 (<unknown module>)
            #25 0x7fba8215f676 in JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*) src/hotspot/share/runtime/javaCalls.cpp:415
            #26 0x7fba8242c904 in jni_invoke_static src/hotspot/share/prims/jni.cpp:887
            #27 0x7fba82437cb7 in jni_CallStaticVoidMethod src/hotspot/share/prims/jni.cpp:1711
            #28 0x7fba8725049a in JavaMain src/java.base/share/native/libjli/java.c:547
            #29 0x7fba87256708 in ThreadJavaMain src/java.base/unix/native/libjli/java_md.c:650
            #30 0x7fba868a7fd3 in start_thread nptl/pthread_create.c:442

              Assignee:
              Justin King
              Reporter:
              Justin King
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: