8304683: Memory leak in WB_IsMethodCompatible

Backport-of: 760c0128a4ef787c8c8addb26894c072ba8b2eb1